<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/refresh"
        android:icon="@drawable/ic_refresh_white"
        android:orderInCategory="100"
        android:title="@string/refresh"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/add"
        android:icon="@drawable/ic_add"
        android:title="@string/add_visit"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/map"
        android:icon="@drawable/ic_map"
        android:title="@string/view_in_map"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/edit"
        android:icon="@drawable/ic_edit"
        android:title="@string/edit_visit"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete_visit"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/pdf"
        android:title="@string/view_pdf" />

</menu>