<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/edit"
        android:icon="@drawable/edit"
        android:orderInCategory="2"
        android:title="@string/edit_visit" />

    <item
        android:id="@+id/add"
        android:icon="@drawable/add"
        android:orderInCategory="1"
        android:title="@string/add_visit"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/map"
        android:icon="@drawable/map"
        android:title="@string/view_in_map"
        android:orderInCategory="3" />

    <item
        android:id="@+id/delete"
        android:icon="@drawable/delete"
        android:orderInCategory="4"
        android:title="@string/delete_visit" />

    <item
        android:id="@+id/pdf"
        android:orderInCategory="5"
        android:title="@string/view_pdf" />

</menu>