<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/refresh"
        android:icon="@drawable/ic_refresh_white"
        android:orderInCategory="4"
        android:title="@string/refresh"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/allot"
        android:orderInCategory="3"
        android:title="@string/allot_call" />

    <item
        android:id="@+id/edit"
        android:icon="@drawable/ic_edit"
        android:orderInCategory="1"
        android:title="@string/edit_call"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_delete"
        android:orderInCategory="2"
        android:title="@string/delete_call"
        app:showAsAction="ifRoom" />

</menu>