<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.Main1">

    <ImageView
        android:layout_margin="@dimen/fab_margin"
        android:layout_gravity="center"
        android:src="@mipmap/ic_launcher"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:contentDescription="@string/app_name" />

    <LinearLayout
        android:layout_gravity="bottom|center_horizontal"
        android:orientation="vertical"
        android:layout_marginBottom="48dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <android.support.design.button.MaterialButton
            android:id="@+id/button1"
            app:textAllCaps="false"
            android:layout_margin="5dp"
            app:strokeWidth="2dp"
            android:textColor="?colorAccent"
            app:strokeColor="?colorAccent"
            android:text="@string/action_sign_in_short"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_gravity="center_horizontal"
            app:cornerRadius="@dimen/fab_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.design.button.MaterialButton
            android:id="@+id/button2"
            style="@style/Widget.MaterialComponents.Button"
            app:textAllCaps="false"
            android:layout_margin="5dp"
            android:text="@string/register"
            android:layout_gravity="center_horizontal"
            app:cornerRadius="@dimen/fab_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>