<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gWhite" />

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:contentDescription="@string/app_name"
                android:src="@raw/logo" />

            <View
                android:layout_width="150dp"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/darker_gray" />

            <ImageView
                android:layout_width="250dp"
                android:layout_height="80dp"
                android:contentDescription="@string/app_name"
                android:src="@raw/logo_p" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/welcome_text"
                android:textColor="@color/gTextDark"
                android:textSize="16sp" />

        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/progressView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@color/gGreen"
                app:srcCompat="@drawable/ic_launcher_foreground" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/loading"
                android:textColor="@color/gTextDark"
                android:textSize="15sp" />

            <ProgressBar
                style="@style/AppTheme.Progress.Green"
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:indeterminate="true"
                android:theme="@style/AppTheme.Progress.Green" />

        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/buttonView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone"
            tools:visibility="gone">

            <android.support.design.button.MaterialButton
                android:id="@+id/button1"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/action_sign_in_short"
                android:textColor="@color/gGreen"
                app:textAllCaps="false" />

            <android.support.design.button.MaterialButton
                android:id="@+id/button2"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/register"
                app:backgroundTint="@color/gGreen"
                app:textAllCaps="false" />

        </android.support.v7.widget.LinearLayoutCompat>

    </android.support.v7.widget.LinearLayoutCompat>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="4dp"
        android:text="@string/designed_for_max"
        android:gravity="center"
        android:textColor="@color/gGreen"
        android:textSize="7sp"
        tools:ignore="SmallSp" />

</android.support.design.widget.CoordinatorLayout>