<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f6f6f6"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="false" />

    <ImageView
        android:layout_height="match_parent"
        android:alpha="0.05"
        android:contentDescription="@string/app_name"
        android:layout_width="match_parent"
        android:padding="50dp"
        android:src="@raw/logo" />

    <TextView
        android:gravity="center"
        android:text="@string/no_visits"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
        android:textSize="18sp"
        android:id="@+id/textView"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:visibility="visible" />

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/layoutIncomplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gWhite"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:visibility="gone"
            tools:visibility="visible">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="10dp"
                android:paddingTop="8dp"
                android:paddingEnd="12dp"
                android:paddingBottom="6dp"
                android:text="@string/visit_incomplete"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
                android:textColor="@color/gPurpleDark"
                android:textSize="14sp" />

            <android.support.design.button.MaterialButton
                android:id="@+id/button1"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"
                android:text="@string/complete_visit"
                android:textSize="12sp"
                app:srcCompat="@drawable/ic_close"
                app:textAllCaps="false" />

        </android.support.v7.widget.LinearLayoutCompat>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:alpha="0.5"
            android:background="@android:color/darker_gray" />

        <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/layoutSignature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gWhite"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:visibility="gone"
            tools:visibility="visible">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="10dp"
                android:paddingTop="8dp"
                android:paddingEnd="12dp"
                android:paddingBottom="6dp"
                android:text="@string/no_signature"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
                android:textColor="@color/gPurpleDark"
                android:textSize="14sp" />

            <android.support.design.button.MaterialButton
                android:id="@+id/button2"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"
                android:text="@string/add_signature"
                android:textSize="12sp"
                app:srcCompat="@drawable/ic_close"
                app:textAllCaps="false" />

        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingBottom="8dp"
            tools:listitem="@layout/recycler_item_2" />

    </android.support.v7.widget.LinearLayoutCompat>

</android.support.design.widget.CoordinatorLayout>