<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:showIn="@layout/a_activity"
    android:orientation="vertical"
    android:gravity="center">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_height="100dp"
        android:layout_width="200dp"
        android:src="@raw/logo" />

    <View
        android:background="@android:color/darker_gray"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:layout_width="180dp"
        android:layout_height="1dp"
        android:alpha="0.6" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:src="@raw/logo_p" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/welcome_text"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="12dp"
        android:textAlignment="center" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/progressView"
        android:orientation="vertical"
        tools:visibility="visible"
        android:paddingTop="20dp"
        android:visibility="gone"
        android:gravity="center">

        <ProgressBar
            android:indeterminateTint="@color/green"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="4dp"
            android:indeterminate="true" />

        <androidx.appcompat.widget.AppCompatTextView
            android:textAppearance="?textAppearanceHeadline6"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="@color/green"
            android:text="@string/loading"
            android:textSize="16sp"
            android:padding="4dp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:id="@+id/buttonView"
        tools:visibility="visible"
        android:visibility="gone"
        android:paddingTop="20dp"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:layout_height="wrap_content"
            android:layout_width="125dp"
            android:id="@+id/button1"
            app:textAllCaps="false"
            app:cornerRadius="24dp"
            android:text="@string/action_sign_in_short" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_width="125dp"
            android:id="@+id/button2"
            android:text="@string/register"
            app:textAllCaps="false"
            app:cornerRadius="24dp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>
